--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,32 @@
-name: Java CI with Maven
+name: Maven CI
 
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '1.8'
 
-    - name: Build with Maven
-      run: mvn clean test
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: \~/.m2/repository
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-m2-
+
+    - name: Install dependencies
+      run: mvn install
+
+    - name: Run tests
+      run: mvn test
