--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,9 @@
-name: Maven CI
+name: Java CI with Maven
 
 on:
   push:
     branches:
+      - master
       - main
 
 jobs:
@@ -10,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     - name: Set up JDK 1.8
       uses: actions/setup-java@v2
@@ -24,6 +26,9 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-m2-
+
+    - name: Build with Maven
+      run: mvn clean test
 
     - name: Install dependencies
       run: mvn install
