--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '1.8'
+        distribution: 'oracle' # 或者 'openjdk' 如果需要 OpenJDK
 
     - name: Cache Maven packages
       uses: actions/cache@v2
