--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,38 +1,28 @@
 name: Java CI with Maven
-
 on:
   push:
     branches:
       - master
       - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v2
-      with:
-        java-version: '1.8'
-        distribution: 'oracle' # 或者 'openjdk' 如果需要 OpenJDK
-
-    - name: Cache Maven packages
-      uses: actions/cache@v2
-      with:
-        path: \~/.m2/repository
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '1.8'
+          distribution: 'AdoptOpenJDK' # 使用 AdoptOpenJDK 分发版
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: \~/.m2/repository
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-m2-
-
-    - name: Build with Maven
-      run: mvn clean test
-
-    - name: Install dependencies
-      run: mvn install
-
-    - name: Run tests
-      run: mvn test
+      - name: Build with Maven
+        run: mvn clean package
+      - name: Run tests
+        run: mvn test
