--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,14 +14,19 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '1.8'
-          distribution: 'AdoptOpenJDK' # 使用 AdoptOpenJDK 分发版
+          distribution: 'AdoptOpenJDK'
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
           path: \~/.m2/repository
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-m2-
+      - name: Restore Maven cache
+        run: |
+          if [ -f \~/.m2/repository ]; then
+            echo "Restoring Maven cache..."
+            mv \~/.m2/repository \~/.m2/repository.bak
+            mkdir -p \~/.m2/repository
+          fi
       - name: Build with Maven
         run: mvn clean package
       - name: Run tests
