--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,19 +14,12 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '1.8'
-          distribution: 'AdoptOpenJDK'
+          distribution: 'openjdk' # 使用 OpenJDK
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
           path: \~/.m2/repository
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-      - name: Restore Maven cache
-        run: |
-          if [ -f \~/.m2/repository ]; then
-            echo "Restoring Maven cache..."
-            mv \~/.m2/repository \~/.m2/repository.bak
-            mkdir -p \~/.m2/repository
-          fi
       - name: Build with Maven
         run: mvn clean package
       - name: Run tests
