--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Set up JDK 1.8
+      - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: '1.8'
-          distribution: 'openjdk' # 使用 OpenJDK
+          java-version: '8' # 使用 Java 8
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
