--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,25 +1,31 @@
-name: Java CI with Maven
+ name: Maven Build
+
 on:
   push:
-    branches:
-      - master
-      - main
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Set up JDK
+
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v2
         with:
-          java-version: '8' # 使用 Java 8
+          java-version: '1.8'
+
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
           path: \~/.m2/repository
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-      - name: Build with Maven
-        run: mvn clean package
-      - name: Run tests
-        run: mvn test
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Run Maven build
+        run: mvn clean install
