--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,26 @@
-name: Run Maven build
+name: Run Maven build with cache
 
 on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    timeout: 3600 # 设置为 1 小时
     steps:
       - uses: actions/checkout@v2
+
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: \~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: '11'
-
-      - name: Check out project
-        run: git clone https://github.com/SE-Design-and-construction/tutorial4.git
-
-      - name: Change directory
-        run: cd tutorial4
 
       - name: Build with Maven
         run: mvn clean test
